--- a/templates/about.html
+++ b/templates/about.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="es-419">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mascotas Encontradas</title>
-    <link rel="stylesheet" href="/static/css/style.css">
+    <title>Sobre Nosotros</title>
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
-
 <body>
-    <header id="header"></header>
+    <header>
+    </header id="header">
     <main>
-
+        <h1>Sobre Nosotros</h1>
+        <p>Información sobre nuestra organización.</p>
     </main>
     <footer>
         <p>&copy; 2024 Nuestro Sitio Web</p>
     </footer>
     <script type="module" src="../main.js"></script>
 </body>
-
 </html>
