--- a/templates/lost_pets.html
+++ b/templates/lost_pets.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
-<html lang="es-419">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moscotas Perdidas</title>
+    <title>Galería</title>
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
-
 <body>
-    <header>
-        <nav>
-            <a href="/index.html">Inicio</a>
-            <a href="contact.html">Contacto</a>
-            <a href="lost_pets.html">Mascotas Perdidas</a>
-            <a href="pets_found.html">Mascotas Encontradas</a>
-        </nav>
-    </header>
+    <header id="header"></header>
     <main>
-
+        <h1>Galería</h1>
+        <div class="carousel">
+            <!-- Ejemplo de card de carrusel -->
+            <div class="carousel-item">
+                <img src="../static/img/michi_01-1024x684.png" alt="Mascota 1">
+                <div class="carousel-info">
+                    <h2>Nombre de la Mascota</h2>
+                    <p>Contacto: 123-456-7890</p>
+                </div>
+            </div>
+            <!-- Agrega más items aquí -->
+        </div>
     </main>
     <footer>
-
+        <p>&copy; 2024 Nuestro Sitio Web</p>
     </footer>
+    <script type="module" src="../main.js"></script>
 </body>
-
 </html>
