--- a/templates/lost_pets.html
+++ b/templates/lost_pets.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galería</title>
     <link rel="stylesheet" href="../static/css/style.css">
 </head>
+
 <body>
     <header id="header"></header>
-    <main>
+    <main class="container">
         <h1>Galería</h1>
-        <div class="carousel">
-            <!-- Ejemplo de card de carrusel -->
-            <div class="carousel-item">
-                <img src="../static/img/michi_01-1024x684.png" alt="Mascota 1">
-                <div class="carousel-info">
-                    <h2>Nombre de la Mascota</h2>
-                    <p>Contacto: 123-456-7890</p>
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+                <div class="carousel">
+                    <!-- Ejemplo de card de carrusel -->
+
+                    <!-- Agrega más items aquí -->
                 </div>
             </div>
-            <!-- Agrega más items aquí -->
         </div>
     </main>
     <footer>
@@ -27,4 +27,5 @@
     </footer>
     <script type="module" src="../main.js"></script>
 </body>
+
 </html>
